<resources>
    <string name="app_name">ZeQuiz</string>

    <!-- Lokasi Sekolah -->
    <string name="lokasi" translatable="false">SD Tabita 02 Manado</string>

    <!-- Fragment/Home -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Untuk Tampilan Kuis -->
    <string name="nama_Kuis">Nama Topik</string>
    <string name="Jumlah_kuis">Kuis ke</string>
    <string name="tanggal">Tanggal</string>
    <string name="Status">Belum dikerjakan</string>

    <!-- Button, Toolbar, Logout -->
    <string name="keluar">Keluar</string>
    <string name="home">Beranda</string>
    <string name="Bank">Bank Soal</string>
    <string name="menu_add">Add</string>

    <!-- Tambah Soal -->
    <string name="soal1">Ketik Soal</string>
    <string name="soal2">Masukkan soal</string>
    <string name="imageket">Tambah Gambar</string>
    <string name="imageket1">format .jpg size 500 MB</string>
    <string name="hint_opsi1">a. </string>
    <string name="hint_opsi2">b. </string>
    <string name="hint_opsi3">c. </string>
    <string name="hint_opsi4">d. </string>
    <string name="correct">Jawaban Benar</string>
    <string name="correct2">Masukkan Jawaban Benar</string>
    <string name="Ts">Tambah Soal</string>
    <string name="simpan">Simpan</string>
    <string name="opsibenar">d. </string>

    <!-- Tambah Kuis -->
    <string name="topik">Tambah Topik</string>
    <string name="bab1">Bab 1 :</string>
    <string name="soal">Daftar Soal</string>
    <string name="select">Bab 1 : Pecahan</string>
    <string name="pertanyaan">Siapa Presiden ke-7 Indonesia</string>
    <string name="gambar">Soal Gambar</string>
    <string name="namakuis">Nama Kuis</string>
    <string name="namakuishint">Masukan Nama Kuis</string>
    <string name="pengaturan1">Jumlah Soal</string>
    <string name="pengaturan2">Waktu</string>
    <string name="pengaturan3">Topik</string>
    <string name="unggahkuis">Unggah</string>

    <!-- Guru Home -->
    <string name="helloguru">Halo, Jess</string>
    <string name="kelasguru">Kelas 4</string>
    <string name="dfrkuis">Daftar Kuis</string>
    <string name="contentdes">bgcard</string>

    <!-- Titles Activity -->
    <string name="title_activity_main_guru">MainGuruActivity</string>
    <string name="title_activity_layer_guru2">LayerGuru2</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tambahkuis">Tambah Kuis</string>
    <string name="title_banksoal">Bank Soal</string>

    <!-- Untuk Liat Skor -->
    <string name="bm">Belum mengerjakan</string>
    <string name="ym">Sudah mengerjakan</string>
    
    
<!--    waktu pilih buat kuis-->
    <string-array name="waktukuis">
        <item>30 menit</item>
        <item>60 menit</item>
    </string-array>

<!--    jumlah soal-->
    <string-array name="jumlahsoal">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>



</resources>
