<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.buatkuis.BuatKuisFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo" />



        <TextView
            android:id="@+id/nmaSklh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"
            android:textColor="@color/biru"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#2A6D7E" />


    <EditText
        android:id="@+id/namakuis"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_line"
        android:layout_marginTop="50dp"
        android:hint="@string/namakuishint"
        android:inputType="text"
        android:padding="16dp"
        android:text="@string/namakuis"
        android:textColor="@color/biru" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/biru"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/spinner_jumlahsoal"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="28dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/biru"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/spinner_waktu"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="28dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/biru"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_topik"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btntmbh"
        android:background="@drawable/buttonunggah"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/unggahkuis"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>