<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Guru.ui.liatscor.LiatScorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Baris logo + teks -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo" />


            <TextView
                android:id="@+id/nmaSklh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textColor="#2A6D7E"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Garis bawah -->
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#2A6D7E"/>

        <!-- Kuis ke berapa -->
        <TextView
            android:id="@+id/kuis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kuis ke-"
            android:textColor="@color/biru"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="#2A6D7E" />

        <!-- Text: Belum Mengerjakan -->
        <TextView
            android:id="@+id/Bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bm"
            android:textColor="@color/biru"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"/>

        <!-- RecyclerView Belum Mengerjakan -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBelumMengerjakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <!-- Text: Sudah Mengerjakan -->
        <TextView
            android:id="@+id/Ym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ym"
            android:textColor="@color/biru"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"/>

        <!-- RecyclerView Sudah Mengerjakan -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSudahMengerjakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />


    </LinearLayout>

</ScrollView>
